Enable the recompilation of tests against mutants that change compile-time constants.
We define two new ant target and rename the test compilation folder to account for recompiled versions of the same tests.
AntRunner now checks if mutant requires test recompilation