@@ -119,6 +119,33 @@
 		<javac srcdir="${ai.tests.dir}/${classalias}" destdir="${ai.tests.dir}/${classalias}" target="1.7" source="1.7" classpathref="test.cp" includeantruntime="false"/>
 	</target>
 
+	<!-- in some cases we need to recompile the test with the mutant and then execute the test -->
+	<target name="recompile-test-with-mutant" description="compile a single test including the mutant in the classpath"
+		depends="compile-mutant, compile-test">
+		<javac
+				srcdir="${test.file}"
+				destdir="${mutant.test.file}"
+				target="1.7" source="1.7"
+				classpathref="nocut.cp"
+				classpath="${mutant.file}"
+				includeantruntime="false"/>
+	</target>
 
+	<target name="recompiled-test-mutant" description="recompile the test using the mutant, and test the mutant to see if test fails"
+		depends="recompile-test-with-mutant">
+		<junit printsummary="withOutAndErr" haltonfailure="false" includeantruntime="false">
+
+			<!-- Sets the content of the classpath to the mutant -->
+			<classpath refid="nocut.cp" />
+			<classpath location="${mutant.file}"/>
+			<classpath location="${mutant.test.file}"/>
+
+			<!-- testname -->
+			<test name="${testClassname}"/>
+				<formatter type="plain" usefile="false"/>
+				<jvmarg value="-Djava.security.manager" />
+				<jvmarg value="-Djava.security.policy==${policyfile}" />
+		</junit>
+	</target>
 
 </project>
